# civl-x

./: Cargo.toml  devenv.nix  devenv.yaml  test.st
bot/: LICENSE  README.md  package.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/lang/: Cargo.toml
crates/lang/src/: lib.rs  proof.rs
crates/lang/src/smalltalk/: mod.rs
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs  test.rs
